# Lustre-Sentinel

./: LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
docs/: ABOUT.md  BUILD-HOWTO.md  TESTING.md
src/: Makefile.am  Makefile.in  lsentineld.1  lsentineld.c  sentinel.1  sentinel.c
tests/: simulate_activity.sh  test-sentinel.sh
