# Copyright (C) 2025 Colin Faber <cfaber@thelustrecollective.com>
#
# This file is part of Lustre Sentinel.
#
# Lustre Sentinel is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Lustre Sentinel is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Lustre Sentinel.  If not, see <https://www.gnu.org/licenses/>.

SUBDIRS = src
